--- a/assets/main.css
+++ b/assets/main.css
@@ -5,9 +5,43 @@ body {
     margin: 0;
     color: #fafafa;
     font-family: sans-serif;
+}
+
+.bg {
     /* Background pattern from Subtle Patterns */
+    width: 200vw;
+    height: 200vh;
     background-image: url("/static/img/stardust.png");
     background-repeat: repeat;
+    animation: 120s ease-in-out infinite bg-shift;
+}
+
+.bg-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+}
+
+@keyframes bg-shift {
+    0% {
+        transform: translate(-50vw, -50vh);
+    }
+
+    30% {
+        transform: translate(-58vw, -55vh);
+    }
+
+    60% {
+        transform: translate(-40vw, -65vh);
+    }
+
+    100% {
+        transform: translate(-50vw, -50vh);
+    }
 }
 
 .dialog {
@@ -29,7 +63,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    height: 100%;
+    height: 100vh;
 }
 
 button {
