--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,11 +7,55 @@ body {
     font-family: sans-serif;
 }
 
+.bg {
+    /* Background pattern from Subtle Patterns */
+    width: 200vw;
+    height: 200vh;
+    background-image: url("/static/img/stardust.png");
+    background-repeat: repeat;
+    animation: 120s ease-in-out infinite bg-shift;
+}
+
+.bg-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+}
+
+@keyframes bg-shift {
+    0% {
+        transform: translate(-50vw, -50vh);
+    }
+
+    30% {
+        transform: translate(-58vw, -55vh);
+    }
+
+    60% {
+        transform: translate(-40vw, -65vh);
+    }
+
+    100% {
+        transform: translate(-50vw, -50vh);
+    }
+}
+
 .dialog {
     border: 1px solid #fafafa;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.2);
     padding: 1rem;
+    margin: 1rem;
     min-width: 10em;
+    display: flex;
+    flex-direction: column;
+}
+
+.dialog button {
+    align-self: flex-end;
 }
 
 .dialog-container {
@@ -19,16 +63,12 @@ body {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    height: 100%;
-}
-
-.layout-element {
-    padding: 0.5rem;
+    height: 100vh;
 }
 
 button {
     padding: 0.5rem;
-    min-width: 5em;
+    min-width: 8em;
     background-color: rgba(200, 200, 255, 0.2);
     border: 1px solid #aaaacc;
     cursor: pointer;
