--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,10 @@ body {
     font-family: sans-serif;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 .bg {
     /* Background pattern from Subtle Patterns */
     width: 200vw;
@@ -50,6 +54,9 @@ body {
     padding: 1rem;
     margin: 1rem;
     min-width: 10em;
+}
+
+.dialog, .dialog form {
     display: flex;
     flex-direction: column;
 }
@@ -59,11 +66,22 @@ body {
 }
 
 .dialog-container {
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     height: 100vh;
+    width: 100vw;
+}
+
+.dialog input {
+    display: block;
+    margin: .5rem 0;
+    width: 100%;
+    line-height: 2;
 }
 
 button {
@@ -73,4 +91,5 @@ button {
     border: 1px solid #aaaacc;
     cursor: pointer;
     color: inherit;
+    margin: .5rem;
 }
